# Bitix

./: .bochsrc  .clang-format  .clangd  .config  .config.flags  .def.configs  .gitignore  Bitix.img  CMakeLists.txt  LICENSE  Makefile  README.md  boot.cfg  cmakefiles  compile_commands.json.tmp  config.cfg  disk.img  index.html  makefiles  menuconfig.py  style.css
.cache/clangd/index/: acpi.c.88F2D1516B3E46C0.idx  acpi.h.93BC513CEF75D2D1.idx  asm.h.409B86F427F0528F.idx  asm.h.AFFE1FABDA27B374.idx  ata.c.7359900ED68341F4.idx  ata.h.C6C50739EC0A0C9C.idx  boot.h.19B0EFBA06854E2A.idx  boot.h.46B8F59B30DEB09F.idx  config.h.6C2D46DE31360D9B.idx  cpuid.c.BADB4C20F3671FC2.idx  cpuid.h.FCE3635DF076B514.idx  ctype.h.C4720FEE2809D7B3.idx  disk.c.B7479F96CFC1ED55.idx  disk.h.F627C9657C1FFFC3.idx  e820.c.67030B47D4C9C1F1.idx  e820.h.1BE68D47CF704CCE.idx  fat.c.2FDD94996B066345.idx  fat.c.94840D0D1D1D93C7.idx  fat.h.7D3D95DC0D0C94C7.idx  fat.h.813040E5B4ED5012.idx  file.c.1B003C7A89DD5EA8.idx  file.h.AA7AF6A15E63AF17.idx  fpu.c.BEFD1A03A522F420.idx  fpu.h.02994987811B7C54.idx  gdt.c.E6F3BD34A7240537.idx  gdt.h.6314B5968DCD55B1.idx  graphics.c.F1C1763DF9D20893.idx  graphics.h.2D295EA269BADC55.idx  heap.c.1DFBF836EFD34C5A.idx  heap.h.0D09D11BA916ABB8.idx  idt.c.44049A5FED1797C1.idx  idt.c.D6B3723F102FA7CF.idx  idt.h.87504C6119C1F545.idx  idt.h.B63C387EFCE97B9A.idx  io.h.2BA2108B9CF38D22.idx  io.h.9E7625AE4B7DFB33.idx  kbd.c.ED057C7440653B9E.idx  kbd.h.06DDFFE72E4AD6E3.idx  legacy_timer.c.CDD7E294BC7ED975.idx  legacy_timer.h.34026DC68A23B738.idx  (+38 more)
Bootldr/: Makefile
Bootldr/Source/: Bootsect.asm  Entry.asm  Io.h  Main.c  Types.h  Vga.c  Vga.h
boot/: Makefile  disk.c  disk.h  entry.asm  fs.c  fs.h  linker.ld  main.c  mbr.asm  pci.c  pci.h  ports.h  types.h  util.c  util.h  x86.asm  x86.h
bootldr/: CMakeLists.txt  Makefile
bootldr/source/: asm.h  boot.h  bootsect.asm  config.h  disk.c  disk.h  e820.c  e820.h  entry.asm  fat.c  fat.h  file.c  file.h  io.h  linker.ld  main.c  real_mode.h  stdio.c  stdio.h  string.c  string.h  util.c  util.h  vesa.c  vesa.h  vga.c  vga.h
fstools/: fs.h  ls.c  mkfs.c
include/: ctype.h  stdio.h  stdlib.h  string.h
kernel/: CMakeLists.txt  Makefile  console.c  console.h  font2c.py  font8x8.txt  kernel.c  libgcc.c  linker.ld  ports.h  types.h
kernel/i386/: entry.asm
kernel/include/: ata.h  debug.h  fat.h  font8x12.h  font8x8.h  graphics.h  heap.h  kbd.h  legacy_timer.h  panic.h  pci.h  pic.h  pit.h  sched.h  terminal.h  timer.h  util.h  vfs.h  vga.h
kernel/include/arch/x86/: acpi.h  asm.h  boot.h  cpuid.h  fpu.h  gdt.h  idt.h  io.h  pmm.h  vmm.h
kernel/source/: ata.c  debug.c  fat.c  graphics.c  heap.c  kbd.c  legacy_timer.c  main.c  panic.c  pci.c  pic.c  pit.c  sched.c  terminal.c  terminal.h  timer.c  util.c  vfs.c  vga.c
kernel/source/arch/x86/: acpi.c  cpuid.asm  cpuid.c  entry.asm  fpu.c  gdt.c  idt.c  intr.asm  linker.ld  pmm.c  vmm.c
libc/: CMakeLists.txt  Makefile
libc/source/: stdio.c  stdlib.c  string.c
programs/: shell.c
src/: .prog.files.mk  Makefile  console.c  console.h  disk.c  disk.h  errno.c  errno.h  fs.c  fs.h  kernel.c  kernel.h  shell.c  types.h  userlib.c  userlib.h  utils.c  utils.h  video.c  video.h  x86.h
src/boot/: Makefile  entry.asm  main.c  mbr.asm  types.h  utils.c  utils.h  x86.asm  x86.h
src/drivers/fs/: bfx.h
src/drivers/net/: ne2k.h  net.h
src/include/: libk.h  types.h  utils.h  x86.h
src/include/drivers/fs/: bfx.h
src/include/drivers/net/: ne2k.h  net.h
src/programs/: cat.c  clear.c  cmatrix.c  echo.c  ls.c  pwd.c  settextmode.c  vi.c
src/x86/: crt0.asm  entry.asm  libasm.asm  runtime.asm  x86.asm  x86.asm.back
tools/: mkfs.bfx.c
tools/mkfs/: Makefile  mkfs.bfx  mkfs.bfx.c
website/: index.html
